--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@mantine/core": "^7.16.2",
+        "@mantine/hooks": "^7.16.2",
         "@radix-ui/react-dropdown-menu": "^2.1.5",
         "@radix-ui/react-label": "^2.1.1",
         "@radix-ui/react-slot": "^1.1.1",
@@ -23,6 +25,7 @@
         "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
+        "@biomejs/biome": "1.9.4",
         "@eslint/js": "^9.17.0",
         "@types/node": "^22.12.0",
         "@types/react": "^18.3.18",
@@ -34,6 +37,8 @@
         "eslint-plugin-react-refresh": "^0.4.16",
         "globals": "^15.14.0",
         "postcss": "^8.5.1",
+        "postcss-preset-mantine": "^1.17.0",
+        "postcss-simple-vars": "^7.0.1",
         "tailwindcss": "^3.4.17",
         "typescript": "~5.6.2",
         "typescript-eslint": "^8.18.2",
