--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.2.2",
+    "@types/downloadjs": "^1.4.6",
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dexie": "^4.0.11",
+    "dexie-export-import": "^4.1.4",
     "dexie-react-hooks": "^1.1.7",
+    "downloadjs": "^1.4.7",
     "lucide": "^0.474.0",
     "lucide-react": "^0.474.0",
     "radix-ui": "^1.1.3",
