--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@radix-ui/react-label": "^2.1.1",
 		"@radix-ui/react-select": "^2.1.6",
 		"@radix-ui/react-slot": "^1.2.2",
+		"@tailwindcss/vite": "^4.1.18",
 		"@types/downloadjs": "^1.4.6",
 		"@vercel/analytics": "^1.5.0",
 		"class-variance-authority": "^0.7.1",
@@ -31,12 +32,12 @@
 		"react-dom": "^18.3.1",
 		"react-router": "^7.3.0",
 		"tailwind-merge": "^2.6.0",
+		"tailwindcss": "^4.1.18",
 		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.0.6",
 		"@eslint/js": "^9.17.0",
-		"@tailwindcss/postcss": "^4.1.5",
 		"@types/node": "^22.12.0",
 		"@types/react": "^18.3.18",
 		"@types/react-dom": "^18.3.5",
@@ -45,7 +46,6 @@
 		"eslint-plugin-react-hooks": "^5.0.0",
 		"eslint-plugin-react-refresh": "^0.4.16",
 		"globals": "^15.14.0",
-		"tailwindcss": "^4.1.5",
 		"typescript": "~5.6.2",
 		"typescript-eslint": "^8.18.2",
 		"vite": "^6.0.5"
